[gd_scene load_steps=23 format=4 uid="uid://bxstjbr4uvpnk"]

[ext_resource type="PackedScene" uid="uid://bjy4ep1gf1lqd" path="res://player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://b73at0n6nbn8t" path="res://world.gd" id="1_ioo17"]
[ext_resource type="TileSet" uid="uid://clqpvht04fxne" path="res://Assets/Tiles/Swamp.tres" id="3_tlwt5"]
[ext_resource type="Texture2D" uid="uid://bgl8j6s1lquyr" path="res://Assets/Background/1.png" id="4_gbfbk"]
[ext_resource type="Texture2D" uid="uid://1qjq88iaw4l1" path="res://Assets/Background/2.png" id="5_ioo17"]
[ext_resource type="Texture2D" uid="uid://dnh6edwywsdb6" path="res://Assets/Background/3.png" id="6_wse8f"]
[ext_resource type="Texture2D" uid="uid://din1bql78ambj" path="res://Assets/Background/4.png" id="7_ic0uy"]
[ext_resource type="Texture2D" uid="uid://c1n4hjars1y1w" path="res://Assets/Background/5.png" id="8_k3n1d"]
[ext_resource type="Script" uid="uid://e8gx03o8mr5a" path="res://game_manager.gd" id="9_ioo17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gv5m4"]
size = Vector2(1005, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioo17"]
size = Vector2(572, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wse8f"]
size = Vector2(685, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic0uy"]
size = Vector2(285, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3n1d"]
size = Vector2(251, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o6r5"]
size = Vector2(252, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70uel"]
size = Vector2(315, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiqwa"]
size = Vector2(540, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2u3nc"]
size = Vector2(284, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udxuc"]
size = Vector2(348, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikiii"]
size = Vector2(379, 20)

[sub_resource type="Curve2D" id="Curve2D_gbfbk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1191, 56, 0, 0, 0, 0, 1653, 56)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ioo17"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 23, -31, 0, 0, 0, 0, 845, -35)
}
point_count = 2

[node name="World" type="Node2D"]
script = ExtResource("1_ioo17")

[node name="Node2D" type="Node2D" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Parallax2D"]
scale = Vector2(2, 2)
texture = ExtResource("4_gbfbk")
centered = false

[node name="Parallax2D2" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Parallax2D2"]
scale = Vector2(2, 2)
texture = ExtResource("5_ioo17")
centered = false

[node name="Parallax2D3" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Parallax2D3"]
scale = Vector2(2, 2)
texture = ExtResource("6_wse8f")
centered = false

[node name="Parallax2D4" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Parallax2D4"]
scale = Vector2(2, 2)
texture = ExtResource("7_ic0uy")
centered = false

[node name="Parallax2D5" type="Parallax2D" parent="Node2D"]
repeat_size = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Parallax2D5"]
scale = Vector2(2, 2)
texture = ExtResource("8_k3n1d")
centered = false

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(0, -15)

[node name="TileMapLayer" type="TileMapLayer" parent="ground"]
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAAAAAAAAQABAAAAAAAAAAEAAQABAAEAAAABAAAAAAABAAAAAAABAAEAFAABAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAEAAAADAAAAAQABAAAAAAADAAEAAQABAAEAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAEAAAAFAAAAAQABAAAAAAAFAAEAAQABAAEAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAEAAAAHAAAAAQABAAAAAAAHAAEAAQABAAEAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAEAAAAJAAAAAQABAAAAAAAJAAEAAQABAAEAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAEAAAALAAAAAQABAAAAAAALAAEAAQABAAEAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAEAAAANAAAAAQABAAAAAAANAAEAAQABAAEAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAEAAAAPAAAAAQABAAAAAAAPAAEAAQABAAEAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAEAAAARAAAAAQABAAAAAAARAAEAAQABAAEAAAASAAAAAQAAAAAAAAASAAEAAQAAAAEAAAATAAAAAQABAAAAAAATAAEAAQABAAEAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAEAAAAVAAAAAQABAAAAAAAVAAEAAQABAAEAAAAWAAAAAQAAAAAAAAAWAAEAAQAAAAEAAAAXAAAAAQABAAAAAAAXAAEAAQABAAEAAAAYAAAAAQAAAAAAAAAYAAEAAQAAAAEAAAAZAAAAAQABAAAAAAAZAAEAAQABAAEAAAAaAAAAAQAAAAAAAAAaAAEAAQAAAAEAAAAbAAAAAQABAAAAAAAbAAEAAQABAAEAAAAcAAAAAQAAAAAAAAAcAAEAAQAAAAEAAAAdAAAAAQABAAAAAAAdAAEAAQABAAEAAAAeAAAAAQAAAAAAAAAeAAEAAQAAAAEAAAAfAAAAAQABAAAAAAAfAAEAAQABAAEAAAAgAAAAAQAAAAAAAAAgAAEAAQAAAAEAAAAhAAAAAQAAAAAAAAAhAAEAAQAAAAEAAAAiAAAAAQABAAAAAAAiAAEAAQABAAEAAAAjAAAAAQAAAAAAAAAjAAEAAQAAAAEAAAAkAAAAAQABAAAAAAAkAAEAAQABAAEAAAAlAAAAAQAAAAAAAAAlAAEAAQAAAAEAAAAmAAAAAQABAAAAAAAmAAEAAQABAAEAAAAnAAAAAQAAAAAAAAAnAAEAAQAAAAEAAAAoAAAAAQABAAAAAAAoAAEAAQABAAEAAAApAAAAAQAAAAAAAAApAAEAAQAAAAEAAAAqAAAAAQABAAAAAAAqAAEAAQABAAEAAAArAAAAAQAAAAAAAAArAAEAAQAAAAEAAAAsAAAAAQABAAAAAAAsAAEAAQABAAEAAAAtAAAAAQAAAAAAAAAtAAEAAQAAAAEAAAAuAAAAAQABAAAAAAAuAAEAAQABAAEAAAAvAAAAAQAAAAAAAAAvAAEAAQAAAAEAAAAwAAAAAQABAAAAAAAwAAEAAQABAAEAAAAxAAAAAQAAAAAAAAAxAAEAAQAAAAEAAAAyAAAAAQABAAAAAAAyAAEAAQABAAEAAAAzAAAAAQAAAAAAAAAzAAEAAQAAAAEAAAA0AAAAAQABAAAAAAA1AAAAAQABAAAAAAA1AAEAAQABAAEAAAABAAIABAAAAAEAAAACAAIABAAAAAEAAAADAAIABAABAAEAAAAEAAIABAAAAAEAAAAFAAIABAABAAEAAAAGAAIABAAAAAEAAAAHAAIABAABAAEAAAAIAAIABAAAAAEAAAAJAAIABAABAAEAAAAKAAIABAAAAAEAAAALAAIABAABAAEAAAAMAAIABAAAAAEAAAANAAIABAABAAEAAAAOAAIABAAAAAEAAAAPAAIABAABAAEAAAAQAAIABAAAAAEAAAARAAIABAABAAEAAAASAAIABAAAAAEAAAATAAIABAABAAEAAAAUAAIABAAAAAEAAAAVAAIABAABAAEAAAAWAAIABAAAAAEAAAAXAAIABAABAAEAAAAYAAIABAAAAAEAAAAZAAIABAABAAEAAAAaAAIABAAAAAEAAAAbAAIABAABAAEAAAAcAAIABAAAAAEAAAAdAAIABAABAAEAAAAeAAIABAAAAAEAAAAfAAIABAABAAEAAAAgAAIABAAAAAEAAAAhAAIABAABAAEAAAAiAAIABAABAAEAAAAjAAIABAABAAEAAAAkAAIABAABAAEAAAAlAAIABAABAAEAAAAmAAIABAABAAEAAAAnAAIABAABAAEAAAAoAAIABAABAAEAAAApAAIABAABAAEAAAAqAAIABAABAAEAAAArAAIABAABAAEAAAAsAAIABAABAAEAAAAtAAIABAABAAEAAAAuAAIABAABAAEAAAAvAAIABAABAAEAAAAwAAIABAABAAEAAAAxAAIABAABAAEAAAAyAAIABAABAAEAAAAzAAIABAABAAEAAAA0AAIABAABAAEAAAAAAAIABAAAAAEAAAA2AAAAAQAAAAAAAAA2AAEAAQAAAAEAAAA3AAAAAQABAAAAAAA3AAEAAQABAAEAAAA4AAAAAQAAAAAAAAA4AAEAAQAAAAEAAAA5AAAAAQABAAAAAAA5AAEAAQABAAEAAAA6AAAAAQAAAAAAAAA6AAEAAQAAAAEAAAA7AAAAAgABAAAAAAA7AAEAAgABAAEAAAD//wAAAQAAAAAAAAD//wEAAQAAAAEAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAEAAAD+/wAAAQABAAAAAAD+/wEAAQABAAEAAABAAAAAAQAAAAAAAABAAAEACwAAAAEAAABBAAAAAQABAAAAAABBAAEAAQABAAEAAABCAAAAAQAAAAAAAABCAAEAAQAAAAEAAABDAAAAAQABAAAAAABDAAEAAQABAAEAAABEAAAAAQAAAAAAAABEAAEAAQAAAAEAAABFAAAAAQABAAAAAABFAAEAAQABAAEAAABGAAAAAQAAAAAAAABGAAEAAQAAAAEAAABHAAAAAQABAAAAAABHAAEAAQABAAEAAABIAAAAAQAAAAAAAABIAAEAAQAAAAEAAABJAAAAAQABAAAAAABJAAEAAQABAAEAAABKAAAAAQAAAAAAAABKAAEAAQAAAAEAAABLAAAAAQABAAAAAABLAAEAAQABAAEAAABMAAAAAQAAAAAAAABMAAEAAQAAAAEAAABNAAAAAQABAAAAAABNAAEAAQABAAEAAABOAAAAAQAAAAAAAABOAAEAAQAAAAEAAABPAAAAAQABAAAAAABPAAEAAQABAAEAAABQAAAAAQAAAAAAAABQAAEAAQAAAAEAAABRAAAAAQABAAAAAABRAAEACwAAAAEAAABYAAAAAQAAAAAAAABYAAEACwAAAAEAAABZAAAAAQABAAAAAABZAAEAAQABAAEAAABaAAAAAQAAAAAAAABaAAEAAQAAAAEAAABbAAAAAQABAAAAAABbAAEAAQABAAEAAABcAAAAAQAAAAAAAABcAAEAAQAAAAEAAABdAAAAAQABAAAAAABdAAEAAQABAAEAAABeAAAAAQAAAAAAAABeAAEAAQAAAAEAAABfAAAAAQABAAAAAABfAAEAAQABAAEAAABgAAAAAQAAAAAAAABgAAEAAQAAAAEAAABhAAAAAQABAAAAAABhAAEAAQABAAEAAABiAAAAAQAAAAAAAABiAAEAAQAAAAEAAABjAAAAAQABAAAAAABjAAEAAQABAAEAAABkAAAAAQAAAAAAAABkAAEAAQAAAAEAAABlAAAAAQABAAAAAABlAAEAAQABAAEAAABmAAAAAQAAAAAAAABmAAEAAQAAAAEAAABnAAAAAQABAAAAAABnAAEACwAAAAEAAAD8/wcAAQAAAAAAAAD8/wgABAABAAEAAAD9/wcAAQABAAAAAAD9/wgABAABAAEAAAD6/wcAAQAAAAAAAAD6/wgABAABAAEAAAD7/wcAAQABAAAAAAD7/wgABAABAAEAAAD4/wcAAQAAAAAAAAD4/wgABAABAAEAAAD5/wcAAQABAAAAAAD5/wgABAABAAEAAAD2/wcAAQAAAAAAAAD2/wgABAABAAEAAAD3/wcAAQABAAAAAAD3/wgABAABAAEAAAD0/wcAAQAAAAAAAAD0/wgABAABAAEAAAD1/wcAAQABAAAAAAD1/wgABAABAAEAAADy/wcAAQAAAAAAAADy/wgABAABAAEAAADz/wcAAQABAAAAAADz/wgABAABAAEAAADw/wcAAQAAAAAAAADw/wgABAABAAEAAADx/wcAAQABAAAAAADx/wgABAABAAEAAADu/wcAAQAAAAAAAADu/wgABAABAAEAAADv/wcAAQABAAAAAADv/wgABAABAAEAAADs/wcAAQAAAAAAAADs/wgABAABAAEAAADt/wcAAQABAAAAAADt/wgABAABAAEAAADq/wcAAQAAAAAAAADq/wgABAABAAEAAADr/wcAAQABAAAAAADr/wgABAABAAEAAADo/wcAAQAAAAAAAADo/wgABAABAAEAAADp/wcAAQABAAAAAADp/wgABAABAAEAAADm/wcAAQAAAAAAAADm/wgABAABAAEAAADn/wcAAQABAAAAAADn/wgABAABAAEAAADk/wcAAQAAAAAAAADk/wgABAABAAEAAADl/wcAAQABAAAAAADl/wgABAABAAEAAADi/wcAAQAAAAAAAADi/wgABAABAAEAAADj/wcAAQABAAAAAADj/wgABAABAAEAAADg/wcAAAAAAAAAAADg/wgAFAAAAAEAAADh/wcAAQABAAAAAADh/wgABAABAAEAAAD+/wcAAQAAAAAAAAD+/wgABAABAAEAAAD//wcAAQABAAAAAAD//wgABAABAAEAAAAAAAcAAQAAAAAAAAAAAAgABAABAAEAAAABAAcAAQABAAAAAAABAAgABAABAAEAAAACAAcAAQAAAAAAAAACAAgABAABAAEAAAADAAcAAgABAAAAAAADAAgAHgABAAEAAADL/wAAAQAAAAAAAADL/wEAAQAAAAEAAADM/wAAAQABAAAAAADM/wEACwABAAEAAADJ/wAAAQAAAAAAAADJ/wEAAQAAAAEAAADK/wAAAQABAAAAAADK/wEAAQABAAEAAADH/wAAAQAAAAAAAADH/wEAAQAAAAEAAADI/wAAAQABAAAAAADI/wEAAQABAAEAAADF/wAAAQAAAAAAAADF/wEAAQAAAAEAAADG/wAAAQABAAAAAADG/wEAAQABAAEAAADD/wAAAQAAAAAAAADD/wEAAQAAAAEAAADE/wAAAQABAAAAAADE/wEAAQABAAEAAADB/wAAAQAAAAAAAADB/wEAAQAAAAEAAADC/wAAAQABAAAAAADC/wEAAQABAAEAAAC//wAAAQAAAAAAAAC//wEAAQAAAAEAAADA/wAAAQABAAAAAADA/wEAAQABAAEAAAC9/wAAAQAAAAAAAAC9/wEAAQAAAAEAAAC+/wAAAQABAAAAAAC+/wEAAQABAAEAAAC7/wAAAQAAAAAAAAC7/wEAAQAAAAEAAAC8/wAAAQABAAAAAAC8/wEAAQABAAEAAAC5/wAAAQAAAAAAAAC5/wEAAQAAAAEAAAC6/wAAAQABAAAAAAC6/wEAAQABAAEAAAC3/wAAAQAAAAAAAAC3/wEAAQAAAAEAAAC4/wAAAQABAAAAAAC4/wEAAQABAAEAAAC1/wAAAQAAAAAAAAC1/wEACwAAAAEAAAC2/wAAAQABAAAAAAC2/wEAAQABAAEAAABQAPn/AQAAAAAAAABQAPr/CwAAAAEAAABRAPn/AQABAAAAAABRAPr/AQABAAEAAABSAPn/AQAAAAAAAABSAPr/AQAAAAEAAABTAPn/AQABAAAAAABTAPr/AQABAAEAAABUAPn/AQAAAAAAAABUAPr/AQAAAAEAAABVAPn/AQABAAAAAABVAPr/AQABAAEAAABWAPn/AQAAAAAAAABWAPr/AQAAAAEAAABXAPn/AQABAAAAAABXAPr/AQABAAEAAABYAPn/AQAAAAAAAABYAPr/AQAAAAEAAABZAPn/AQABAAAAAABZAPr/AQABAAEAAABaAPn/AQAAAAAAAABaAPr/AQAAAAEAAABbAPn/AQABAAAAAABbAPr/AQABAAEAAABcAPn/AQAAAAAAAABcAPr/AQAAAAEAAABdAPn/AQABAAAAAABdAPr/AQABAAEAAABeAPn/AQAAAAAAAABeAPr/AQAAAAEAAABfAPn/AQABAAAAAABfAPr/CwAAAAEAAAAyAAgAFAAAAAEAAAAzAAgAFAABAAEAAAA0AAgABAABAAEAAAA1AAgABAAAAAEAAAA2AAgABAABAAEAAAA3AAgABAAAAAEAAAA4AAgABAABAAEAAAA5AAgABAAAAAEAAAA6AAgABAABAAEAAAA7AAgABAABAAEAAAA8AAgABAABAAEAAAA9AAgABAABAAEAAAA+AAgABAABAAEAAAA/AAgABAABAAEAAABAAAgABAABAAEAAABBAAgABAABAAEAAABCAAgABAABAAEAAABDAAgABAABAAEAAABEAAgABAABAAEAAABFAAgABAABAAEAAABGAAgABAABAAEAAABHAAgABAABAAEAAABIAAgABAABAAEAAABJAAgABAABAAEAAABKAAgABAABAAEAAABLAAgABAABAAEAAABMAAgABAABAAEAAABNAAgABAABAAEAAABOAAgABAABAAEAAABPAAgABAABAAEAAABQAAgABAABAAEAAABRAAgABAABAAEAAABSAAgABAABAAEAAABTAAgABAABAAEAAABUAAgABAABAAEAAABVAAgABAABAAEAAABWAAgABAABAAEAAABXAAgABAABAAEAAABYAAgABAABAAEAAABZAAgABAABAAEAAABaAAgABAABAAEAAABbAAgABAABAAEAAABcAAgAHgABAAEAAAAyAAcAHgAAAAAAAAAzAAcAGAAAAAAAAAA0AAcAGAABAAAAAAA1AAcAAQABAAAAAAA2AAcAAQAAAAAAAAA3AAcAAQABAAAAAAA4AAcAAQABAAAAAAA5AAcAAQABAAAAAAA6AAcAAQAAAAAAAAA7AAcAAQABAAAAAAA8AAcAAQAAAAAAAAA9AAcAAQABAAAAAAA+AAcAAQAAAAAAAAA/AAcAAQABAAAAAABAAAcAAQAAAAAAAABBAAcAAQABAAAAAABCAAcAAQAAAAAAAABDAAcAAQAAAAAAAABEAAcAAQABAAAAAABFAAcAAQAAAAAAAABGAAcAAQABAAAAAABHAAcAAQAAAAAAAABIAAcAAQABAAAAAABJAAcAAQAAAAAAAABKAAcAAQABAAAAAABLAAcAAQAAAAAAAABMAAcAAQABAAAAAABNAAcAAQAAAAAAAABOAAcAAQABAAAAAABPAAcAAQAAAAAAAABQAAcAAQABAAAAAABRAAcAAQAAAAAAAABSAAcAAQABAAAAAABTAAcAAQAAAAAAAABUAAcAAQABAAAAAABVAAcAAQAAAAAAAABWAAcAAQABAAAAAABXAAcAAQAAAAAAAABYAAcAAQABAAAAAABZAAcAAQAAAAAAAABaAAcAAQABAAAAAABbAAcAAQAAAAAAAABcAAcAAgABAAAAAADU/wAAAAAAAAAAAADU/wEACwAAAAEAAADV/wAAAQABAAAAAADV/wEAAQABAAEAAADW/wAAAQAAAAAAAADW/wEAAQAAAAEAAADX/wAAAQABAAAAAADX/wEAAQABAAEAAADY/wAAAQAAAAAAAADY/wEAAQAAAAEAAADZ/wAAAQABAAAAAADZ/wEAAQABAAEAAADa/wAAAQAAAAAAAADa/wEAAQAAAAEAAADb/wAAAQABAAAAAADb/wEAAQABAAEAAADc/wAAAQAAAAAAAADc/wEAAQAAAAEAAADd/wAAAQABAAAAAADd/wEAAQABAAEAAADe/wAAAQAAAAAAAADe/wEAAQAAAAEAAADf/wAAAQABAAAAAADf/wEAAQABAAEAAADg/wAAAQAAAAAAAADg/wEAAQAAAAEAAADh/wAAAQABAAAAAADh/wEAAQABAAEAAADi/wAAAQAAAAAAAADi/wEAAQAAAAEAAADj/wAAAQABAAAAAADj/wEAAQABAAEAAADk/wAAAQAAAAAAAADk/wEAAQAAAAEAAADl/wAAAQABAAAAAADl/wEAAQABAAEAAADm/wAAAQAAAAAAAADm/wEAAQAAAAEAAADn/wAAAQABAAAAAADn/wEAAQABAAEAAADo/wAAAQAAAAAAAADo/wEAAQAAAAEAAADp/wAAAQABAAAAAADp/wEAAQABAAEAAADq/wAAAQAAAAAAAADq/wEAAQAAAAEAAADr/wAAAQABAAAAAADr/wEAAQABAAEAAADs/wAAAQAAAAAAAADs/wEAAQAAAAEAAADt/wAAAQABAAAAAADt/wEAAQABAAEAAADu/wAAAQAAAAAAAADu/wEAAQAAAAEAAADv/wAAAQABAAAAAADv/wEAAQABAAEAAADw/wAAAQAAAAAAAADw/wEAAQAAAAEAAADx/wAAAQABAAAAAADx/wEAAQABAAEAAADy/wAAAQAAAAAAAADy/wEAAQAAAAEAAADz/wAAAQABAAAAAADz/wEAAQABAAEAAAD0/wAAAQAAAAAAAAD0/wEAAQAAAAEAAAA1AAIABAABAAEAAAA2AAIABAABAAEAAAA3AAIABAABAAEAAAA4AAIABAABAAEAAAA5AAIABAABAAEAAAA6AAIABAABAAEAAAA0AAEAAQABAAEAAAD//wIABAAAAAEAAAD+/wIABAAAAAEAAAD9/wIAFAAAAAEAAAA7AAIAHgABAAEAAAApAPj/AQABAAAAAAAqAPj/AQAAAAAAAAArAPj/AQABAAAAAAAsAPj/AQAAAAAAAAAtAPj/AQABAAAAAAAuAPj/AQAAAAAAAAAvAPj/AQABAAAAAAAwAPj/AQAAAAAAAAAxAPj/AQABAAAAAAAyAPj/AQAAAAAAAAAzAPj/AQABAAAAAAA0APj/AQAAAAAAAAA1APj/AQABAAAAAAA2APj/AQAAAAAAAAA3APj/AQABAAAAAAA4APj/AQAAAAAAAAA5APj/AQABAAAAAAA6APj/AQAAAAAAAAA7APj/AQABAAAAAAAoAPn/CwAAAAEAAAApAPn/AQABAAEAAAAqAPn/AQAAAAEAAAArAPn/AQABAAEAAAAsAPn/AQAAAAEAAAAtAPn/AQABAAEAAAAuAPn/AQAAAAEAAAAvAPn/AQABAAEAAAAwAPn/AQAAAAEAAAAxAPn/AQABAAEAAAAyAPn/AQAAAAEAAAAzAPn/AQABAAEAAAA0APn/AQAAAAEAAAA1APn/AQABAAEAAAA2APn/AQAAAAEAAAA3APn/AQABAAEAAAA4APn/AQAAAAEAAAA5APn/AQABAAEAAAA6APn/AQAAAAEAAAA7APn/CwAAAAEAAADg//n/CwAAAAEAAADh//n/AQABAAEAAADi//n/AQAAAAEAAADj//n/AQABAAEAAADk//n/AQAAAAEAAADl//n/AQABAAEAAADm//n/AQAAAAEAAADn//n/AQABAAEAAADo//n/AQAAAAEAAADp//n/AQABAAEAAADq//n/AQAAAAEAAADr//n/AQABAAEAAADs//n/AQAAAAEAAADt//n/AQABAAEAAADu//n/AQAAAAEAAADv//n/AQABAAEAAADw//n/AQAAAAEAAADx//n/CwAAAAEAAADg//j/AQAAAAAAAADh//j/AQABAAAAAADi//j/AQAAAAAAAADj//j/AQABAAAAAADk//j/AQAAAAAAAADl//j/AQABAAAAAADm//j/AQAAAAAAAADn//j/AQABAAAAAADo//j/AQAAAAAAAADp//j/AQABAAAAAADq//j/AQAAAAAAAADr//j/AQABAAAAAADs//j/AQAAAAAAAADt//j/AQABAAAAAADu//j/AQAAAAAAAADv//j/AQABAAAAAADw//j/AQAAAAAAAADx//j/AQABAAAAAADB//j/AQAAAAAAAADB//n/CwAAAAEAAADC//j/AQABAAAAAADC//n/AQABAAEAAADD//j/AQAAAAAAAADD//n/AQAAAAEAAADE//j/AQABAAAAAADE//n/AQABAAEAAADF//j/AQAAAAAAAADF//n/AQAAAAEAAADG//j/AQABAAAAAADG//n/AQABAAEAAADH//j/AQAAAAAAAADH//n/AQAAAAEAAADI//j/AQABAAAAAADI//n/AQABAAEAAADJ//j/AQAAAAAAAADJ//n/AQAAAAEAAADK//j/AQABAAAAAADK//n/AQABAAEAAADL//j/AQAAAAAAAADL//n/AQAAAAEAAADM//j/AQABAAAAAADM//n/AQABAAEAAADN//j/AQAAAAAAAADN//n/AQAAAAEAAADO//j/AQABAAAAAADO//n/AQABAAEAAADP//j/AQAAAAAAAADP//n/AQAAAAEAAADQ//j/AQABAAAAAADQ//n/AQABAAEAAADR//j/AQAAAAAAAADR//n/AQAAAAEAAADS//j/AQABAAAAAADS//n/AQABAAEAAADT//j/AQAAAAAAAADT//n/AQAAAAEAAADU//j/AQABAAAAAADU//n/AQABAAEAAADV//j/AQAAAAAAAADV//n/AQAAAAEAAADW//j/AQABAAAAAADW//n/CwAAAAEAAAD1/wAAAQABAAAAAAD1/wEACwABAAEAAAAoAPj/AQAAAAAAAAA=")
tile_set = ExtResource("3_tlwt5")
use_kinematic_bodies = true
collision_visibility_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(455.5, 27)
shape = SubResource("RectangleShape2D_gv5m4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ground"]
position = Vector2(-224, 130.5)
shape = SubResource("RectangleShape2D_ioo17")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ground"]
position = Vector2(1143.5, 131)
shape = SubResource("RectangleShape2D_wse8f")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ground"]
position = Vector2(1167.5, 12)
shape = SubResource("RectangleShape2D_ic0uy")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="ground"]
position = Vector2(1535.5, 11.5)
shape = SubResource("RectangleShape2D_k3n1d")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="ground"]
position = Vector2(1408, -101)
shape = SubResource("RectangleShape2D_2o6r5")
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="ground"]
position = Vector2(799.5, -113)
shape = SubResource("RectangleShape2D_70uel")
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="ground"]
position = Vector2(-432, 10.5)
shape = SubResource("RectangleShape2D_hiqwa")
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="ground"]
position = Vector2(-368, -113)
shape = SubResource("RectangleShape2D_2u3nc")
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="ground"]
position = Vector2(-832, -112)
shape = SubResource("RectangleShape2D_udxuc")
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="ground"]
position = Vector2(-1008.5, 12)
shape = SubResource("RectangleShape2D_ikiii")
one_way_collision = true

[node name="player" parent="." instance=ExtResource("1_f3sb7")]
position = Vector2(408, -62)
scale = Vector2(3.425, 3.425)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, -112)
curve = SubResource("Curve2D_gbfbk")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-1191, 56)

[node name="TimerFontes" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
autostart = true

[node name="GameManager" type="Node" parent="."]
script = ExtResource("9_ioo17")

[node name="DoorSpawnTimer" type="Timer" parent="GameManager"]
wait_time = 5.0
autostart = true

[node name="Path2D" type="Path2D" parent="GameManager"]
curve = SubResource("Curve2D_ioo17")

[node name="spawn" type="PathFollow2D" parent="GameManager/Path2D"]
unique_name_in_owner = true
position = Vector2(23, -31)
rotation = -0.004866142

[node name="SpawnPoints" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(150, -24)

[connection signal="timeout" from="TimerFontes" to="." method="_on_timer_fontes_timeout"]
[connection signal="timeout" from="GameManager/DoorSpawnTimer" to="GameManager" method="_on_door_spawn_timer_timeout"]
